# export-safari-highlights

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  safaricsv.py  setup.py
export_safari_highlights/: __init__.py  __main__.py  core.py
