[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "export_safari_highlights"
author = "Anders K. Pettersen"
author-email = "andstatical@gmail.com"
home-page = "https://github.com/staticaland/export-safari-highlights"
classifiers = ["License :: OSI Approved :: MIT License"]
requires=["requests",
    "clint",
    "browsercookie",
    "blindspin",
]

[tool.flit.scripts]
flit = "export_safari_highlights.core:main"
